...
fun LoadedContent(
    modifier: Modifier,
    items: List<TopUser>,
    loadImage: LoadImageCallback,
    toggleFavorite: ToggleFavorite
) {
    LazyColumn(modifier.testTag("loaded_content")) {
        items(count = items.size, key = { items[it].id }, itemContent = { index ->
            val item = items[index]
            Spacer(Modifier.height(20.dp))
            Card(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(64.dp)
                    .testTag("user_item")
            ) {
                Row(
                    modifier = Modifier
                        .fillMaxSize()
                        .padding(end = 16.dp),
                    verticalAlignment = Alignment.CenterVertically
...
